## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\"

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = lab6

lab6_SOURCES = \
	main.cc \
	intDLList.cc \
	intDLList.h \
	intDLLNode.cc \
	intDLLNode.h

lab6_LDFLAGS = 

lab6_LDADD = 


